Issue #20 Add property minPermSize to MavenCli
- Closes #20